Fixed small issue with background not covering whole page

--- a/styles/samz.module.css
+++ b/styles/samz.module.css
@@ -5,6 +5,7 @@
     min-height: 100vh;
     min-width: 100vh;
     overflow: auto;
+    margin-bottom: -.5rem;
 }
 
 .button{
